--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5118,7 +5118,7 @@ button.close {
 }
 .modal-content {
   position: relative;
-  background-color: black;
+  background-color:black;
   background-clip: padding-box;
   border: 1px solid #999;
   border: 1px solid rgba(0, 0, 0, .2);
@@ -5134,11 +5134,11 @@ button.close {
   bottom: 0;
   left: 0;
   z-index: 1040;
-  background-color: #333;
+  background-color: #000;
 }
 .modal-backdrop.fade {
   filter: alpha(opacity=0);
-  opacity: 0;
+  opacity: .5;
 }
 .modal-backdrop.in {
   filter: alpha(opacity=50);
